test/bad/arrays/comprehension03.px

a = [x.toString() for x in 1...5]
a[0] == '2'
